fix toggle jump after click

--- a/src/app/components/ui/theme-toggle/toggle.scss
+++ b/src/app/components/ui/theme-toggle/toggle.scss
@@ -18,7 +18,7 @@
     }
 
     &.moon-icon {
-      right: 5px;
+      right: 4px;
       color: #374151;
       display: none;
     }
@@ -40,6 +40,7 @@
     background-color: #ffffff;
     transition: 0.4s;
     border-radius: 34px;
+    border: 1px solid #ffffff;
 
     &:before {
       position: absolute;
@@ -47,7 +48,7 @@
       height: 26px;
       width: 26px;
       left: 4px;
-      bottom: 4px;
+      bottom: 3px;
       background-color: #ffffff;
       transition: 0.2s;
       border-radius: 50%;
